--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'subNav';
 
 // PAGES
+@import 'fictionTemplate';
 @import 'chapterTemplate';
 @import 'chapterImgs';
 @import 'toc-links';
