--- a/templates/macros/title-macro.html
+++ b/templates/macros/title-macro.html
@@ -16,4 +16,38 @@
 <title>A Journal Entry from the Last Man on Earth</title>
 {% endif %} {%if title == 'Table of Contents' %}
 <title>Table of Contents</title>
+{% endif %} {%if title == 'aBishopsWatchdog' %}
+<title>A Bishop's Watchdog</title>
+{% endif %} {%if title == 'aChairToNowhere' %}
+<title>A Chair to Nowhere</title>
+{% endif %} {%if title == 'politiciansOfTheFuture' %}
+<title>Politicians of the Future</title>
+{% endif %} {%if title == 'mirrorInTheMirror' %}
+<title>Mirror In the Mirror</title>
+{% endif %} {%if title == 'theDocotorsApprentice' %}
+<title>The Doctor's Apprentice</title>
+{% endif %} {%if title == 'anAddictsDesperation' %}
+<title>An Addict's Desperation</title>
+{% endif %} {%if title == 'anEssayConcerningYou' %}
+<title>An Essay Concerning You</title>
+{% endif %} {%if title == 'anExistentialCritiqueOfCapitalism' %}
+<title>An Existential Critique of Capitalism</title>
+{% endif %} {%if title == 'assumptiveCritiques' %}
+<title>Assumptive Critiques</title>
+{% endif %} {%if title == 'aStrangersStranger' %}
+<title>A Stranger's Stranger</title>
+{% endif %} {%if title == 'aTheoryOfAcknowledgement' %}
+<title>A Theory of Acknowledgement</title>
+{% endif %} {%if title == 'kingsSoConquered' %}
+<title>Kings So Conquered</title>
+{% endif %} {%if title == 'severed' %}
+<title>Severed</title>
+{% endif %} {%if title == 'theMeeting' %}
+<title>The Meeting</title>
+{% endif %} {%if title == 'theSonderer' %}
+<title>The Sonderer</title>
+{% endif %} {%if title == 'theTimeIMetRachelBloom' %}
+<title>The Time I Met Rachel Bloom</title>
+{% endif %} {%if title == 'theWatchers' %}
+<title>The Watchers</title>
 {% endif %} {% endmacro %}
