--- a/templates/partials/nav/subNav_nonfiction-LF.html
+++ b/templates/partials/nav/subNav_nonfiction-LF.html
@@ -1,34 +1,43 @@
 <!------------ LONGFORM NONFICTION ------------>
 <div class="subNav pointerEvents-none" id="list-nonfiction-long">
   <h2 class="subNav-header">Longform Non-fiction - coming soon</h2>
-  <a href="#" class="subNav-link">
+  <a href="anEssayConcerningYou.html" class="subNav-link">
     <p class="subNav-link--text">1. An Essay Concerning You</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="aTheoryOfAcknowledgement.html" class="subNav-link">
     <p class="subNav-link--text">2. A Theory of Acknowledgement</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="" class="subNav-link">
     <p class="subNav-link--text">3. An Addict, a Thief, and a Catalogger</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theMeeting.html" class="subNav-link">
+    <p class="subNav-link--text">The Meeting</p>
+  </a>
+  <a href="anAddictsDesperation.html" class="subNav-link">
+    <p class="subNav-link--text">An Addict's Desperation</p>
+  </a>
+  <a href="theTimeIMetRachelBloom.html" class="subNav-link">
+    <p class="subNav-link--text">The Time I Met Rachel Bloom</p>
+  </a>
+  <a href="aStrangersStranger.html" class="subNav-link">
     <p class="subNav-link--text">4. A Stranger's Stranger</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="kingsSoConquered.html" class="subNav-link">
     <p class="subNav-link--text">5. Kings So Conquered</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="anExistentialCritiqueOfCapitalism.html" class="subNav-link">
     <p class="subNav-link--text">6. An Existential Critique of Capitalism</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="assumptiveCritiques.html" class="subNav-link">
     <p class="subNav-link--text">7. Assumptive Critiques</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theSonderer.html" class="subNav-link">
     <p class="subNav-link--text">8. The Sonderer</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theWatchers.html" class="subNav-link">
     <p class="subNav-link--text">9. The Watchers</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="severed.html" class="subNav-link">
     <p class="subNav-link--text">10. Severed</p>
   </a>
 </div>
