--- a/templates/partials/toc/toc_fiction.html
+++ b/templates/partials/toc/toc_fiction.html
@@ -1,16 +1,26 @@
 <!--! FICTION -->
 <div class="toc-pieceLinks--fiction pointerEvents-none" id="toc-fictionDisplay">
-  <a href="#" class="pieceLink pieceLink-fiction" id="f1">
+  <a href="mirrorInTheMirror.html" class="pieceLink pieceLink-fiction" id="f1">
     Mirror In the Mirror
   </a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f2">A Chair to Nowhere</a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f3">
+  <a href="aChairToNowhere.html" class="pieceLink pieceLink-fiction" id="f2">
+    A Chair to Nowhere
+  </a>
+  <a href="aBishopsWatchdog.html" class="pieceLink pieceLink-fiction" id="f3">
     A Bishop's Watchdog
   </a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f4">
+  <a
+    href="theDoctorsApprentice.html"
+    class="pieceLink pieceLink-fiction"
+    id="f4"
+  >
     The Doctor's Apprentice
   </a>
-  <a href="#" class="pieceLink pieceLink-fiction" id="f5">
+  <a
+    href="politiciansofthefuture.html"
+    class="pieceLink pieceLink-fiction"
+    id="f5"
+  >
     Politicians of the Future
   </a>
 </div>
