--- a/templates/partials/toc/toc_nonfiction-LF.html
+++ b/templates/partials/toc/toc_nonfiction-LF.html
@@ -2,28 +2,57 @@
 <div class="toc-pieceLinks--LF pointerEvents-none" id="toc-LFDisplay">
   <div class="toc-set1--LF">
     <h3 class="header-LF">The Essays</h3>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf1">
+    <a href="anEssayConcerningYou.html" class="pieceLink pieceLink-LF" id="lf1">
       An Essay Concerning You
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf2">
+    <a
+      href="aTheoryOfAcknowledgement.html"
+      class="pieceLink pieceLink-LF"
+      id="lf2"
+    >
       A Theory of Acknowledgement
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf3">
+    <a
+      href="anExistentialCritiqueOfCapitalism.html"
+      class="pieceLink pieceLink-LF"
+      id="lf3"
+    >
       An Existential Critique of Capitalism
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf4">Assumptive Critiques</a>
+    <a href="assumptiveCritiques.html" class="pieceLink pieceLink-LF" id="lf4">
+      Assumptive Critiques
+    </a>
   </div>
   <div class="toc-set2--LF">
     <h3 class="header-LF">The Witness</h3>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf5">
+    <a href=".html" class="pieceLink pieceLink-LF" id="lf5">
       An Addict, a Thief, and a Catalogger
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf6">
+    <a href="theMeeting.html" class="pieceLink pieceLink-LF" id="lf7">
+      The Meeting
+    </a>
+    <a href="anAddictsDesperation.html" class="pieceLink pieceLink-LF" id="lf7">
+      An Addicts Desperation
+    </a>
+    <a
+      href="theTimeIMetRachelBloom.html"
+      class="pieceLink pieceLink-LF"
+      id="lf7"
+    >
+      The Time I Met Rachel Bloom
+    </a>
+    <a href="aStrangersStranger.html" class="pieceLink pieceLink-LF" id="lf6">
       A Stranger's Stranger
     </a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf7">Kings So Conquered</a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf8">The Sonderer</a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf9">The Watchers</a>
-    <a href="#" class="pieceLink pieceLink-LF" id="lf10">Severed</a>
+    <a href="kingsSoConquered.html" class="pieceLink pieceLink-LF" id="lf7">
+      Kings So Conquered
+    </a>
+    <a href="theSonderer.html" class="pieceLink pieceLink-LF" id="lf8">
+      The Sonderer
+    </a>
+    <a href="theWatchers.html" class="pieceLink pieceLink-LF" id="lf9">
+      The Watchers
+    </a>
+    <a href="severed.html" class="pieceLink pieceLink-LF" id="lf10">Severed</a>
   </div>
 </div>
