--- a/templates/partials/nav/subNav_fiction.html
+++ b/templates/partials/nav/subNav_fiction.html
@@ -1,19 +1,19 @@
 <!------------ FICTION ------------>
 <div class="subNav pointerEvents-none" id="list-shortStories">
   <h2 class="subNav-header">Fiction - coming soon</h2>
-  <a href="#" class="subNav-link">
+  <a href="mirrorInTheMirror.html" class="subNav-link">
     <p class="subNav-link--text">1. Mirror In the Mirror</p>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="aChairToNowhere.html" class="subNav-link">
     <div class="subNav-link--text">2. A Chair to Nowhere</div>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="aBishopsWatchdog.html" class="subNav-link">
     <div class="subNav-link--text">3. A Bishop's Watchdog</div>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="theDoctorsApprentice.html" class="subNav-link">
     <div class="subNav-link--text">4. The Doctor's Apprentice</div>
   </a>
-  <a href="#" class="subNav-link">
+  <a href="politiciansofthefuture.html" class="subNav-link">
     <div class="subNav-link--text">5. Politicians of the Future</div>
   </a>
 </div>
