--- a/templates/partials/fiction/tda.html
+++ b/templates/partials/fiction/tda.html
@@ -8,7 +8,7 @@
     </div>
     <div class="fiction-text">
       <!-- LOOP NJK-->
-      {% for fictionText in theDocotorsApprentice %}
+      {% for fictionText in theDoctorsApprentice %}
       <p class="text">{{fictionText.paragraph}}</p>
       {% endfor %}
     </div>
