--- a/templates/partials/nonfictionLF/aamrb.html
+++ b/templates/partials/nonfictionLF/aamrb.html
@@ -3,12 +3,12 @@
   <div class="fiction-content">
     <div id="scrollAdhoc"></div>
     <div class="title title-content">
-      <h2 class="title-fictionTitle">An Existential Critique of Capitalism</h2>
+      <h2 class="title-fictionTitle">An Addict Meets Rachel Bloom</h2>
       <span class="title-authorName">By Robert Klasen</span>
     </div>
     <div class="fiction-text">
       <!-- LOOP NJK-->
-      {% for nonfictionText in anExistentialCritiqueOfCapitalism %}
+      {% for nonfictionText in anAddictMeetsRachelBloom %}
       <p class="text">{{nonfictionText.paragraph}}</p>
       {% endfor %}
     </div>
