--- a/templates/partials/toc/toc_nonfiction-LF.html
+++ b/templates/partials/toc/toc_nonfiction-LF.html
@@ -12,21 +12,18 @@
     >
       A Theory of Acknowledgement
     </a>
-    <a
-      href="anExistentialCritiqueOfCapitalism.html"
-      class="pieceLink pieceLink-LF"
-      id="lf3"
-    >
-      An Existential Critique of Capitalism
-    </a>
     <a href="assumptiveCritiques.html" class="pieceLink pieceLink-LF" id="lf4">
       Assumptive Critiques
     </a>
   </div>
   <div class="toc-set2--LF">
     <h3 class="header-LF">The Witness</h3>
-    <a href="theMeeting.html" class="pieceLink pieceLink-LF" id="lf7">
-      The Meeting
+    <a
+      href="anAddictMeetsRachelBloom.html"
+      class="pieceLink pieceLink-LF"
+      id="lf7"
+    >
+      An Addict Meets Rachel Bloom
     </a>
     <a href="anAddictsDesperation.html" class="pieceLink pieceLink-LF" id="lf7">
       An Addicts Desperation
@@ -46,9 +43,6 @@
     </a>
     <a href="theSonderer.html" class="pieceLink pieceLink-LF" id="lf8">
       The Sonderer
-    </a>
-    <a href="theWatchers.html" class="pieceLink pieceLink-LF" id="lf9">
-      The Watchers
     </a>
     <a href="severed.html" class="pieceLink pieceLink-LF" id="lf10">Severed</a>
   </div>
