Updated TOC fiction links

--- a/templates/partials/toc/toc_fiction.html
+++ b/templates/partials/toc/toc_fiction.html
@@ -1,16 +1,16 @@
 <!--! FICTION -->
 <div class="toc-pieceLinks--fiction pointerEvents-none" id="toc-fictionDisplay">
-  <a href="mirrorInTheMirror.html" class="pieceLink pieceLink-fiction" id="f1">
+  <a href="mirrorinthemirror.html" class="pieceLink pieceLink-fiction" id="f1">
     Mirror In the Mirror
   </a>
-  <a href="aChairToNowhere.html" class="pieceLink pieceLink-fiction" id="f2">
+  <a href="achairtonowhere.html" class="pieceLink pieceLink-fiction" id="f2">
     A Chair to Nowhere
   </a>
-  <a href="aBishopsWatchdog.html" class="pieceLink pieceLink-fiction" id="f3">
+  <a href="abishopswatchdog.html" class="pieceLink pieceLink-fiction" id="f3">
     A Bishop's Watchdog
   </a>
   <a
-    href="theDoctorsApprentice.html"
+    href="thedoctorsapprentice.html"
     class="pieceLink pieceLink-fiction"
     id="f4"
   >
