Added text and fixed poetry

--- a/templates/partials/toc/toc.html
+++ b/templates/partials/toc/toc.html
@@ -30,7 +30,7 @@
     <!--! Nonfiction LF -->
     {% include "partials/toc/toc_nonfiction-LF.html" %}
     <!--! Nonfiction SF -->
-    {% include "partials/toc/toc_nonfiction-SF.html" %}
+    <!-- {% include "partials/toc/toc_nonfiction-SF.html" %} -->
     <!--! Aphorisms  -->
     {% include "partials/toc/toc_aphorisms.html" %}
     <!--! Poetry -->
