--- a/templates/partials/toc/toc_poetry.html
+++ b/templates/partials/toc/toc_poetry.html
@@ -34,9 +34,7 @@
     <div class="pieceLink pieceLink-poetry" id="p22">
       Who Turned Out the Lights
     </div>
-    <div class="pieceLink pieceLink-poetry" id="p23">
-      Who Turned Out the Lights
-    </div>
+    <div class="pieceLink pieceLink-poetry" id="p23">The Wheel Is Turning</div>
   </div>
   <div class="toc-pieceDisplay" id="poemTextAndTitle">
     <div class="test"></div>
