--- a/templates/partials/toc/toc_modals.html
+++ b/templates/partials/toc/toc_modals.html
@@ -42,6 +42,20 @@
     <div class="line-2"></div>
   </span>
 </div>
+<!-- DEMOLITION DERBY  -->
+<div class="modal" id="demoltionDerby">
+  <h5 class="modal-header">Demolition Derby: HOUSE FOR SALE</h5>
+  <div class="modal-textContainer">
+    <!-- LOOP NJK-->
+    {% for greenerText in demoltionDerby %}
+    <p class="modal-text">{{greenerText.paragraph}}</p>
+    {% endfor %}
+  </div>
+  <span class="modal-close">
+    <div class="line-1"></div>
+    <div class="line-2"></div>
+  </span>
+</div>
 
 <!-- The Greener Side PT 1 -->
 <div class="modal" id="partOne">
