Fixed for all pieces -- all pieces added and clickable with text

--- a/templates/partials/toc/toc_modals.html
+++ b/templates/partials/toc/toc_modals.html
@@ -43,11 +43,11 @@
   </span>
 </div>
 <!-- DEMOLITION DERBY  -->
-<div class="modal" id="demoltionDerby">
+<div class="modal" id="demolitionDerby">
   <h5 class="modal-header">Demolition Derby: HOUSE FOR SALE</h5>
   <div class="modal-textContainer">
     <!-- LOOP NJK-->
-    {% for greenerText in demoltionDerby %}
+    {% for greenerText in demolitionDerby %}
     <p class="modal-text">{{greenerText.paragraph}}</p>
     {% endfor %}
   </div>
