Final Cut mobile  touches 3 -- the greener side

--- a/scss/_toc-modals.scss
+++ b/scss/_toc-modals.scss
@@ -20,6 +20,7 @@
   pointer-events: none;
   background-color: $color-white-opaque-4;
   transition: opacity 0.3s;
+  overflow-x: hidden;
 }
 
 .modal-header {
