--- a/css/style.css
+++ b/css/style.css
@@ -3612,7 +3612,8 @@ a {
   opacity: 0;
   pointer-events: none;
   background-color: rgba(233, 233, 233, 0.95);
-  transition: opacity 0.3s; }
+  transition: opacity 0.3s;
+  overflow-x: hidden; }
 
 .modal-header {
   margin-top: 1rem;
